[project]
name = "simulator-from-dag"
version = "0.1.0"
description = "Simulate data from a DAG"
authors = [{ name="Pavel Averin" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "scipy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
